3.2.5
	+ Upgrade to 3.3 notification in dashboard
	+ Added new communityEdition() helper method in EBox::Global
	+ Add version to header logo
	+ Always reload page after saving changes
	+ Use AJAX call to refresh save change buttons
	+ Copy all the redis keys from 'conf' to 'ro' when saving changes of
	  any module to prevent incoherences
	+ Delete unused stopAllModules() and restartAllModules() in EBox::Global
	+ Workaround against modules changed when saving all changes
	+ Display remote services messages if they exist on Dashboard
	+ Recover from widget function exceptions
	+ Fixed mdstat output processing to remove "(auto-read-only)"
	+ Fixed audit logging of delete actions
	+ Fixed errors with row ID in ManageAdmins table
	+ Added missing EBox::Exceptions uses
	+ Fixed bug in selectSetter which hitted selects on DataForm with
	  'unique' option enabled
	+ Added EBox::Types::IPRange::addressesFromBeginToEnd class method
3.2.4
	+ Set proper trial link in advertisements
	+ Show register link in local backup when not registered
	+ Strip the 'C:\fakepath\' that chrome adds to the file input
	+ Make dump_exceptions key work also for mason exceptions
	+ Pass HTTP_PROXY system environment variable to CGIs as they are
	  used in Zentyal modules
	+ Waiting for Zentyal ready page check is more robust now
3.2.3
	+ Fixed error in the recursive method for getting module dependencies
	+ Fixed JS typo which disabled export backup dialog
	+ Added dbus dependency to avoid problems on some minimal installations
3.2.2
	+ When restoring pre-3.2 backups take in account that apache
	  module was renamed to webadmin
	+ Make sure that we always commit/discard audit of changes when we
	  save/revoke all modules
	+ Add new row attribute "disabled"
	+ Fixed JS glitch which broke the dashboard periodical updates
	+ Better check of referer which skips cloud domain if it does not exists
	+ Avoid warning when stopping a module without FirewallHelper
3.2.1